# friesa-k-DSN-crai2026

./: .gitignore  README.md  pyproject.toml  reproduce_paper.py
calibration/bundles/: crai_banking_agent.yaml  crai_warehouse_robot.yaml
src/friesa/: __init__.py
src/friesa/calibration/: fingerprint.py  loader.py  models.py  registry.py  warnings.py
src/friesa/domain/: models.py
src/friesa/engine/: __init__.py  core.py  models.py  ssa.py
src/friesa/uncertainty/: monte_carlo.py
